--- a/shutdownOS.ipynb
+++ b/shutdownOS.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this prgram is to shutdown the pc \n",
     "import os"
    ]
   },
@@ -17,17 +18,10 @@
    "source": [
     "choice = input(\"Shutdown your computer? (y or n) : \");\n",
     "if choice == 'y' or choice == 'Y':\n",
-    "    os.system(\"shutdown /i\");\n",
+    "    os.system(\"shutdown /s\");\n",
     "else:\n",
     "    print(\"Exiting the programi\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
